assets/css/style.css
/* Asterisk wildcard selector to overide default browser styles */
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lemon&display=swap');

/* General styles */
body {
    /*General project styles */
    color: green;
    font-family: 'Lato', sans-serif
}

/* flex wrap */
.flex-wrapper {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    justify-content: space-between;
  }

/* Header */
header {
background-color: #ffffff;
padding: 0 1rem;
position: fixed;
z-index: 99;
width: 100%;
box-shadow: 0 2.5px 5px #404040;
}

h1 {
    font-family: 'lemon' sans-serif
}

/*styling for list in heading */
#menu {
    letter-spacing: 2px;
    list-style-type: none;
    font-size: 110%;
    color:#404040
}

/* list items styling */
#menu li a:hover{
    color:#fe1c1d
}
.active {
    border-bottom: 1px solid #404040;
}

a{
    text-decoration: none;
}

/* Navbar styles with dropdown toggle */
nav{
    position: absolute;
    background-color: #ffffff;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2.5px 5px #404040;
    display:none;
}

#menu > li {
    margin-bottom: 0.5rem;
    text-decoration: none;
}


/* Main content */
main {
    background-color: yellow;
    /* Make main element take up space to push footer to bottom */
    flex: 1 0 auto;
}

/* Footer */
footer {background-color: blue;}

